week4/thursday/kijanikiosk-infra/modules/app_server/main.tf
resource "aws_security_group" "app" {
  name        = "kijanikiosk-${var.name}-${var.environment}-sg"
  description = "KijaniKiosk ${var.name} server firewall"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ssh_allowed_cidr
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "kijanikiosk-${var.name}-${var.environment}-sg"
  }
}

resource "aws_instance" "this" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_id
  vpc_security_group_ids = [aws_security_group.app.id]
  key_name               = var.key_name

  tags = {
    Name        = "kijanikiosk-${var.name}-${var.environment}"
    Service     = var.name
    Environment = var.environment
    ManagedBy   = "terraform"
  }
}
